--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "i18next-browser-languagedetector": "^6.0.1",
     "markdown-to-jsx": "^7.1.0",
     "mic-recorder-to-mp3": "^2.2.2",
+    "prettier": "^2.8.8",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-color": "^2.19.3",
