--- a/backend/package.json
+++ b/backend/package.json
@@ -15,67 +15,67 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@sentry/node": "^5.29.2",
-    "@types/pino": "^6.3.4",
+    "@sentry/node": "^5.30.0",
+    "@types/pino": "^6.3.12",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.5",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "date-fns": "^2.16.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "date-fns": "^2.30.0",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "http-graceful-shutdown": "^2.3.2",
+    "http-graceful-shutdown": "^2.4.0",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
     "mustache": "^4.2.0",
-    "mysql2": "^2.2.5",
-    "pg": "^8.4.1",
-    "pino": "^6.9.0",
+    "mysql2": "^2.3.3",
+    "pg": "^8.11.0",
+    "pino": "^6.14.0",
     "pino-pretty": "~4.7.1",
     "qrcode-terminal": "^0.12.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.22.3",
+    "sequelize": "^5.22.5",
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.1.0",
-    "socket.io": "^3.0.5",
+    "socket.io": "^3.1.2",
     "uuid": "^8.3.2",
-    "whatsapp-web.js": "^1.19.5",
-    "yup": "^0.32.8"
+    "whatsapp-web.js": "^1.21.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/bluebird": "^3.5.32",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.13",
-    "@types/factory-girl": "^5.0.2",
-    "@types/faker": "^5.1.3",
-    "@types/jest": "^26.0.15",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/multer": "^1.4.4",
-    "@types/mustache": "^4.1.2",
-    "@types/node": "^14.11.8",
-    "@types/pino-pretty": "~4.7.1",
-    "@types/supertest": "^2.0.10",
-    "@types/uuid": "^8.3.3",
-    "@types/validator": "^13.1.0",
-    "@types/yup": "^0.29.8",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "eslint": "^7.10.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "@types/bluebird": "^3.5.38",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/factory-girl": "^5.0.8",
+    "@types/faker": "^5.5.9",
+    "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
+    "@types/mustache": "^4.2.2",
+    "@types/node": "^14.18.51",
+    "@types/pino-pretty": "~4.7.5",
+    "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
+    "@types/validator": "^13.7.17",
+    "@types/yup": "^0.29.14",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^3.4.1",
     "factory-girl": "^5.0.4",
-    "faker": "^5.1.0",
-    "jest": "^26.6.0",
-    "nodemon": "^2.0.4",
-    "prettier": "^2.1.2",
+    "faker": "^5.5.3",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "supertest": "^5.0.0",
-    "ts-jest": "^26.4.1",
-    "ts-node-dev": "^1.0.0-pre.63",
+    "ts-jest": "^26.5.6",
+    "ts-node-dev": "^1.1.8",
     "typescript": "4.1.6"
   }
 }
