--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,7 @@
     "sequelize-typescript": "^1.1.0",
     "socket.io": "^3.1.2",
     "uuid": "^8.3.2",
-    "whatsapp-web.js": "^1.21.0",
+    "whatsapp-web.js": "1.22.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
